--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
 
     <!-- 第三页 -->
     <div class="part part_3 hide" id="scene">
+      <div class="back">重新选择</div>
       <div class="layer layer_1 head_bg head_bg1 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
         <img data-depth="0.15" src="img/citigo.png">
         <div data-depth="0.00" class="article">
           <p>脚步轻盈，梦幻汇聚</p>
-          <p>尽在杭州<span>CitiGo</span></p>
+          <p>尽在杭州城中<span>CitiGO</span></p>
         </div>
       </div>
       <div class="layer layer_2 head_bg head_bg2 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
@@ -190,7 +191,7 @@
   </div>
   <div class="part poster hide">
     <div class="will_hide">
-      <div class="title">长按保存</div>
+      <!-- <div class="title">长按保存</div> -->
       <div class="html2canvas">
         <img class="bg" src="">
         <img class="layer" src="">
