--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/darre.css">
   <link rel="stylesheet" type="text/css" href="css/shake.css">
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?1713524ea34a8f1eb6b32673ce00e825";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body>
   <audio loop="true" sytle="display:none" id="BGM">
