--- a/redirect.html
+++ b/redirect.html
@@ -19,7 +19,7 @@
     <meta name="msapplication-tap-highlight" content="no">
   <title></title>
   <script type="text/javascript" src="js/libs/jquery.min.js"></script>
-  <script type="text/javascript" src="js/config.js?id=1"></script>
+  <script type="text/javascript" src="js/config.js?id=2"></script>
 </head>
 <body>
 <script type="text/javascript">
@@ -33,7 +33,8 @@ var redirect_url = 'https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx
 var base_url = '';
 var f = $_GET('from');
 if(f=='hotel'){
-  base_url = encodeURIComponent(Config.HOTEL_URL);
+  // base_url = encodeURIComponent(Config.HOTEL_URL);
+  base_url = encodeURIComponent(Config.WEB_URL);
 }else{
   base_url = encodeURIComponent(Config.WEB_URL);
 }
