--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     </script>
 </head>
 <body>
-  <!-- <audio loop="true" sytle="display:none" id="BGM">
+  <audio loop="true" sytle="display:none" id="BGM">
     <source src="audio/bgm.mp3?kjk=0" type="audio/mpeg"></source>
-  </audio> -->
-  <!-- <div class="music_play"><img src="img/music.png"></div> -->
+  </audio>
+  <div class="music_play"><img src="img/music.png"></div>
   <div class="mask hide"></div>
   <div class="share_mask hide"><img src="img/share.png"></div>
   <div id="container" class="content">
-    <div class="part loading load hide">
+    <div class="part loading load">
       <span>谁是这个音乐故事的主角？</span>
       <img src="img/click_into.png">
     </div>
@@ -345,9 +345,9 @@
   <script type="text/javascript" src="js/libs/loadJS.js"></script>
   <script type="text/javascript" src="js/libs/gray.js"></script>
   <script type="text/javascript" src="js/xiami_music.js"></script>
+  <script type="text/javascript" src="js/share.js"></script>
   <script type="text/javascript" src="js/poster.js?id=1"></script>
   <script type="text/javascript" src="js/api.js"></script>
-  <script type="text/javascript" src="js/share.js"></script>
   <script type="text/javascript" src="js/index.js?id=2"></script>
 </body>
 </html>
