--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="mask hide"></div>
   <div class="share_mask hide"><img src="img/share.png"></div>
   <div id="container" class="content">
-    <div class="part loading load">
+    <div class="part loading load hide">
       <span>谁是这个音乐故事的主角？</span>
       <img src="img/click_into.png">
     </div>
@@ -346,7 +346,7 @@
   <script type="text/javascript" src="js/libs/gray.js"></script>
   <script type="text/javascript" src="js/xiami_music.js"></script>
   <script type="text/javascript" src="js/share.js"></script>
-  <script type="text/javascript" src="js/poster.js?id=1"></script>
+  <script type="text/javascript" src="js/poster.js?id=22"></script>
   <script type="text/javascript" src="js/api.js"></script>
   <script type="text/javascript" src="js/index.js?id=2"></script>
 </body>
